# desktop-pet

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
docs/: DESIGN.md
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/ai/: ChatEngine.ts  ConversationMemory.test.ts  ConversationMemory.ts  MoodAnalyzer.ts  ProactiveEngine.ts  buildContextPrompt.test.ts  index.ts  memoryRetrieval.test.ts  memoryRetrieval.ts  memoryStorage.ts  memoryTypes.ts
src/hooks/: useChat.ts  usePetInteraction.ts  usePetRenderer.ts  useReminder.ts
src/pet/: AnimationController.ts  AudioManager.ts  BehaviorTree.ts  FrameRateController.ts  IRenderer.ts  OffscreenLayer.ts  Particles.ts  PetRenderer.ts  Physics.ts  PixelRenderer.ts  ReminderScheduler.ts  RendererFactory.ts  SpriteAnimations.ts  SpriteCache.ts  SpriteDrawer.ts  SpriteGenerator.ts  StateMachine.ts  index.ts  lumieSprite.test.ts  skinPack.test.ts  skinPack.ts  skinRegistry.test.ts  skinRegistry.ts  spriteUtils.ts  theme.ts  types.ts
src/store/: petStore.test.ts  petStore.ts
src/ui/: ChatBubble.css  ChatBubble.tsx  LoadingIndicator.tsx  MoodIndicator.tsx  NotePanel.tsx  QuickMenu.css  QuickMenu.tsx  ReminderNotification.tsx  ReminderPanel.tsx  SearchPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  SkinEditor.css  SkinEditor.tsx  SkinPreview.css  SkinPreview.tsx  TranslatePanel.tsx  WeatherPanel.tsx
src/utils/: autostart.ts  customSkins.test.ts  customSkins.ts  (+1 more)
(+4 files in other folders)
